log
Fri, Mar 21, 2025 12:09:30 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025  3:46:37 PM: 
 tests:  0|5
total_score: 0/70
2bd9536
Fri, Mar 21, 2025  4:39:52 PM: 
 exercises.c | 40 ++++++++++++++++++++++++++++++++++++++--
 1 file changed, 38 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
c452391
Sat, Mar 22, 2025  2:22:24 PM: 
 exercises.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:14: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
          if (isEmpty(pila))
              ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0b6c1df
Sat, Mar 22, 2025  2:23:35 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
8fd6031
Sat, Mar 22, 2025  2:24:30 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e1cf2a9
Sat, Mar 22, 2025  3:00:21 PM: 
 exercises.c | 20 ++++++++++++++------
 1 file changed, 14 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:135:24: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
          char ultimo = top(pila);
                        ^~~
exercises.c:136:21: error: comparison between pointer and integer [-Werror]
          if (ultimo == NULL)
                     ^~
exercises.c:141:28: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
          if ((c == ')' && *(char*)ultimo == '(') || (c == ']' && *(char*)ultimo == '[') || (c == '}' && *(char*)ultimo == '{'))
                            ^
exercises.c:141:67: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
          if ((c == ')' && *(char*)ultimo == '(') || (c == ']' && *(char*)ultimo == '[') || (c == '}' && *(char*)ultimo == '{'))
                                                                   ^
exercises.c:141:106: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
          if ((c == ')' && *(char*)ultimo == '(') || (c == ']' && *(char*)ultimo == '[') || (c == '}' && *(char*)ultimo == '{'))
                                                                                                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
cb63373
Sat, Mar 22, 2025  3:03:37 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:135:24: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
          char ultimo = top(pila);
                        ^~~
exercises.c:136:21: error: comparison between pointer and integer [-Werror]
          if (ultimo == NULL)
                     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
c38158b
Sat, Mar 22, 2025  3:05:05 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
17af63b
